# imagetra

./: .gitignore  README.md  pyproject.toml  translate.py
configs/: easyocr.yaml  nllb.yaml  openocr.yaml  paddleocr.yaml  textra.yaml
imagetra/: __init__.py  cli.py  serve.py  translate.py
imagetra/api/: base.py  flask.py  socket.py  websocket.py
imagetra/common/: base.py  batch.py  bbox.py  config.py  filter.py  insert.py  lang.py  logger.py  media.py  metric.py  result.py  transform.py
imagetra/detector/: base.py  doctr.py  easyocr.py  openocr.py  paddleocr.py
imagetra/editor/: base.py  render.py  srnet.py
imagetra/pipeline/: img2img.py  img2txt.py  vdo2vdo.py
imagetra/tracker/: base.py  boxmot.py  cvtracker.py
imagetra/translator/: base.py  nllb.py  textra.py
srnet/: README.md  cfg.py  datagen.py  model.py  requirements.txt  train.py
srnet/SRNet-Datagen/: README.md
srnet/SRNet-Datagen/codes/: cfg.py
srnet/SRNet-Datagen/codes/Synthtext/: data_cfg.py  gen.py
srnet/SRNet-Datagen/data/: README.md
srnet/custom_feed/: from_train.sh
